[package]
name = "anonymous-conference-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.2"
futures = "0.3"
log = "0.4.20"
openssl = "0.10.64"
rand = "0.8.5"
skip32 = "1.0.5"

[dependencies.async-std]
version = "1.6"
features = ["attributes"]
